scripts/as1/iptables.rules
*nat
:PREROUTING ACCEPT [1004092:69809643]
:INPUT ACCEPT [160153:12613259]
:OUTPUT ACCEPT [717266:44399161]
:POSTROUTING ACCEPT [759849:47275897]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
*mangle
:PREROUTING ACCEPT [278380247:157575437114]
:INPUT ACCEPT [4828877:1040328538]
:FORWARD ACCEPT [273295443:156522289452]
:OUTPUT ACCEPT [4629672:931260787]
:POSTROUTING ACCEPT [277923558:157453485502]
COMMIT
*filter
:FORWARD ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp -i eth0 --dport 22 -j ACCEPT
-A INPUT -i tun+ -j ACCEPT
-A INPUT -p tcp -m tcp -i eth0 --dport 80 -j ACCEPT
-A INPUT -s 10.140.0.3 -p tcp -m tcp -i eth0 --dport 3306 -j ACCEPT 
-A INPUT -p tcp -m tcp -i eth0 --dport 1194 -j ACCEPT
-A INPUT -p udp -m udp -i eth0 --dport 1194 -j ACCEPT
-A INPUT -i eth0 -j DROP
-A FORWARD -m state -o eth0 --state INVALID -j DROP
-A FORWARD -m state -o eth0 --state INVALID -j DROP
-A FORWARD -s 192.168.150.0/24 -j ACCEPT
-A FORWARD -o eth0 -j DROP
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -o eth0 -j ACCEPT
-A OUTPUT -o tun+ -j ACCEPT
COMMIT
